Added ngrx and basic store (updated angular)

--- a/ClientApp/src/app/admin-page/admin-page.component.html
+++ b/ClientApp/src/app/admin-page/admin-page.component.html
@@ -3,6 +3,7 @@
   <app-project-list-item
     *ngFor="let file of files$ | async"
     [projectFile]="file"
+    (removeEvent)="onRemove($event)"
   >
   </app-project-list-item>
 </div>
