--- a/ClientApp/src/app/project-list-item/project-list-item.component.html
+++ b/ClientApp/src/app/project-list-item/project-list-item.component.html
@@ -1,5 +1,5 @@
 <div class="project-list-item--wrapper">
   <span>{{projectFile.name}}</span>
   <span> <a [routerLink]="['/edit', projectFile.id]"> Pokreni </a> </span>
-  <span> <button> Obrisi </button> </span>
+  <span> <button (click)="onRemove(projectFile.id)"> Obrisi </button> </span>
 </div>
