--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -1,4 +1,2 @@
-<h1>Welcome!</h1>
-
-<button (click)="onCreateNew()">Create new?</button>
+<button (click)="onCreateNew()">Create new sandbox</button>
 
