--- a/ClientApp/src/app/editor/editor.component.html
+++ b/ClientApp/src/app/editor/editor.component.html
@@ -1,6 +1,6 @@
 <ngx-monaco-editor [options]="editorOptions" [(ngModel)]="code"></ngx-monaco-editor>
-<button (click)="onCreateNew()">Run</button>
-<button (click)="onCreateNew()">Lock</button>
-<button (click)="onCreateNew()">Clear output</button>
+<button (click)="onRunProgram()">Run</button>
+<button (click)="onLockProgram()">Lock</button>
+<button (click)="onClearOutput()">Clear output</button>
 
 <textarea [(ngModel)]="outputConsole" class="form-control" id="exampleFormControlTextarea1" rows="8"></textarea>
