--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -1,2 +1,7 @@
 <button (click)="onCreateNew()">Create new sandbox</button>
 
+<div>
+
+  These tools mix productivity and creativity, getting students to share and collaborate on projects, give and take feedback, annotate, brainstorm, make media, or just hang out. No matter the use, there's tech here that'll show students how collaboration leads to better knowledge building as well as the development of social and emotional skills like teamwork.
+</div>
+
