--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -1,7 +1,25 @@
-<button (click)="onCreateNew()">Create new sandbox</button>
 
 <div>
+  <div class="jumbotron">
+    <h3>Goal</h3>
+    Our main motive is trying to mix productivity and creativity, giving collegues, fellow students and developers a platform to share and collaborate on python projects. Our idea is to
+    include more and more programming languages and libraries that could be included and imported in user scripts.
+  </div>
 
-  These tools mix productivity and creativity, getting students to share and collaborate on projects, give and take feedback, annotate, brainstorm, make media, or just hang out. No matter the use, there's tech here that'll show students how collaboration leads to better knowledge building as well as the development of social and emotional skills like teamwork.
-</div>
+  <div class="jumbotron">
+    <h3>Built-in Python compiler</h3>
+    Python is one of the fastest growing programming languages that has applicability in many scientific paths. On Collaborators we are dedicated to make writing python scripts
+    easier. All you have to do is login with your Facebook or Google account and you can write and compile your script on our server.
+  </div>
+
+  <div class="jumbotron">
+    <h3>Interactive editing</h3>
+    If you want to edit your script with some friends or collegues, you can do it here. We can assure you that when you are writting on some line, nobody else can change it.
+    But they can modify any other. When you stop working on it, it is automatically unlocked, and it can be edited by someone else.
+  </div>
+
+  <div class="jumbotron">
+    <h3>Lectures</h3>
+
+  </div>
 
