--- a/ClientApp/src/app/login/login.component.html
+++ b/ClientApp/src/app/login/login.component.html
@@ -7,7 +7,7 @@
             <form name="form">
 
               <!-- <button class="btn btn-primary" style="text-align:center">Login</button>   -->
-
+              <div class="green-logo"></div>
             </form>
 
             <hr style="border-top: 1px solid #eee;">
