--- a/ClientApp/src/app/nav-menu/nav-menu.component.css
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.css
@@ -20,3 +20,9 @@ html {
 .navigation-bar-gr{
   background-color:lightgreen
 }
+
+.navigation-logo {
+  background: url(../../assets/images/logoSmall.png);
+  width:35px;
+  height:35px;
+}
