--- a/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,24 +1,27 @@
 <header>
   <nav class='navbar navbar-expand-sm navbar-toggleable-sm navbar-light navigation-bar-gr border-bottom box-shadow mb-3'>
     <div class="container">
-      <a class="navbar-brand" [routerLink]='["/"]'>Collaborators</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-label="Toggle navigation"
-        [attr.aria-expanded]="isExpanded" (click)="toggle()">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse" [ngClass]='{"show": isExpanded}'>
-        <ul class="navbar-nav flex-grow">
-          <li class="nav-item" [routerLinkActive]='["link-active"]' [routerLinkActiveOptions]='{ exact: true }'>
-            <button (click)="onNewProject()">New project</button>
-          </li>
-          <li class="nav-item" [routerLinkActive]='["link-active"]'>
-            <a class="nav-link text-dark" [routerLink]='["/projects"]'>Projects</a>
-          </li>
-          <li class="nav-item" [routerLinkActive]='["link-active"]'>
-            <a class="nav-link text-dark" [routerLink]='["/logout"]'>Logout</a>
-          </li>
-        </ul>
-      </div>
+      <a class="navbar-brand" [routerLink]='["/"]'>
+        <div class="navigation-logo"></div>
+
+      </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-label="Toggle navigation"
+                [attr.aria-expanded]="isExpanded" (click)="toggle()">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse" [ngClass]='{"show": isExpanded}'>
+          <ul class="navbar-nav flex-grow">
+            <li class="nav-item" [routerLinkActive]='["link-active"]' [routerLinkActiveOptions]='{ exact: true }'>
+              <button class="d-flex" style="background-color:transparent; border-color:transparent" (click)="onNewProject()">New project</button>
+            </li>
+            <li class="nav-item" [routerLinkActive]='["link-active"]'>
+              <button class="d-flex" style="background-color:transparent; border-color:transparent" (click)="onProjects()">Projects</button>
+            </li>
+            <li class="nav-item" [routerLinkActive]='["link-active"]'>
+              <button class="d-flex" style="background-color:transparent; border-color:transparent" (click)="onLogout()">Logout</button>
+            </li>
+          </ul>
+        </div>
     </div>
   </nav>
 </header>
