--- a/ClientApp/src/app/login/login.component.html
+++ b/ClientApp/src/app/login/login.component.html
@@ -16,13 +16,13 @@
 
               <div class="col-6">
 
-                <button (click)="socialSignIn('facebook')" class="loginBtn loginBtn--facebook">
+                <button (click)="socialSignIn('facebook')" class="btn btn-primary">
 
                   Login with Facebook
                 </button>
               </div>
               <div class="col-6 text-right">
-                <button (click)="socialSignIn('google')" class="loginBtn loginBtn--google">
+                <button (click)="socialSignIn('google')" class="btn btn-danger">
                   Login with Google
                 </button>
               </div>
