--- a/ClientApp/src/app/editor/editor.component.html
+++ b/ClientApp/src/app/editor/editor.component.html
@@ -1,10 +1,10 @@
 <ngx-monaco-editor (ngModelChange)="onChange($event)" [options]="editorOptions" [(ngModel)]="code"></ngx-monaco-editor>
-<button (click)="onRunProgram()">Run</button>
-<button (click)="onLockProgram()">Lock</button>
-<button (click)="onClearOutput()">Clear output</button>
+<button class="btn-success" (click)="onRunProgram()">Run</button>
+  <button [className]="cssStringVar" (click)="onLock()">Lock</button>
+  <button (click)="onClearConsole()">Clear output</button>
 
 <textarea [(ngModel)]="outputConsole" class="form-control" id="exampleFormControlTextarea1" rows="8"></textarea>
 
-<ul class="list-group" >
-  <li class="list-group-item" *ngFor="let usr of usrs">{{usr}}</li>
-</ul>
+  <ul class="list-group">
+    <li class="list-group-item" *ngFor="let usr of usrs">{{usr}}</li>
+  </ul>
