--- a/ClientApp/src/app/projects-page/projects-page.component.html
+++ b/ClientApp/src/app/projects-page/projects-page.component.html
@@ -1,8 +1,6 @@
 <div>
-  <app-project-list-item
-    *ngFor="let file of files$ | async"
-    [projectFile]="file"
-    (removeEvent)="onRemove($event)"
-  >
-  </app-project-list-item>
+  <ul class="list-group">
+    <li class="list-group-item" *ngFor="let proj of projects"><a href="{{proj.url}}">{{proj.url}}</a></li>
+  </ul>
+
 </div>
