--- a/ClientApp/src/app/projects-page/projects-page.component.html
+++ b/ClientApp/src/app/projects-page/projects-page.component.html
@@ -1,6 +1,6 @@
 <div>
   <ul class="list-group">
-    <li class="list-group-item" *ngFor="let proj of projects"><a href="{{proj.url}}">{{proj.url}}</a></li>
+    <li class="list-group-item" *ngFor="let proj of projects"><a href="{{proj.url}}">{{proj.url}}-{{proj.users}}</a></li>
   </ul>
 
 </div>
